--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,21 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+@font-face {
+  font-family: 'Nekst-Black';
+  src: local('Nekst-Black'), url(./fonts/Nekst-Black.woff) format('woff');
+}
+@font-face {
+  font-family: 'Gilroy-Regular';
+  src: local('Gilroy-Regular'), url(./fonts/Gilroy-Regular.woff) format('woff');
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+* {
+  padding: 0;
+  margin: 0;
+  border: none;
 }
